--- a/10_Vision.ipynb
+++ b/10_Vision.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,36 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "사진에 보이는 재료들로 팬케이크를 만들 수 있습니다. 아래에 간단한 팬케이크 레시피를 소개합니다.\n",
-      "\n",
-      "**재료:**\n",
-      "- 밀가루\n",
-      "- 우유\n",
-      "- 계란\n",
-      "- (선택 사항) 설탕, 베이킹 파우더, 소금, 버터\n",
-      "\n",
-      "**조리법:**\n",
-      "\n",
-      "1. 큰 볼에 밀가루 1컵, 베이킹 파우더 2작은술, 설탕 2큰술, 소금 한 꼬집을 넣고 섞습니다.\n",
-      "   \n",
-      "2. 다른 볼에 계란 1개와 우유 1컵을 넣고 잘 섞어줍니다.\n",
-      "\n",
-      "3. 젖은 재료(우유와 계란 혼합물)를 마른 재료에 조금씩 넣으면서 덩어리지지 않도록 잘 섞어줍니다. 너무 많이 섞지 않도록 주의하세요.\n",
-      "\n",
-      "4. 프라이팬에 약간의 버터를 녹이고 중약불로 예열합니다.\n",
-      "\n",
-      "5. 반죽을 프라이팬에 적당한 크기로 붓고, 표면에 기포가 생기면 뒤집어서 다른 한쪽도 노릇하게 익힙니다.\n",
-      "\n",
-      "6. 완성된 팬케이크에 시럽, 과일, 버터 등을 곁들여 즐기세요.\n",
-      "\n",
-      "맛있게 드세요!\n"
+      "네, 이미지에 계란이 4개 보입니다.\n"
      ]
     }
    ],
@@ -193,7 +171,8 @@
     "        {\n",
     "          \"type\": \"text\",\n",
     "          # \"text\": \"사진에 대해 자세히 설명해줘\"\n",
-    "          \"text\": \"사진에 있는 재료로 맛있는 요리법 알려줘\"\n",
+    "          # \"text\": \"사진에 있는 재료로 맛있는 요리법 알려줘\"\n",
+    "          \"text\": \"계란 4개 있는거 아냐?\"\n",
     "        }\n",
     "      ]\n",
     "    }\n",
