--- a/advanced/Quickstart-rag.ipynb
+++ b/advanced/Quickstart-rag.ipynb
@@ -123,24 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Package install for quickstart\n",
-    "! pip install -r requirements.txt --quiet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set endpoints and deployment model (provide the name of the deployment)\n",
-    "AZURE_SEARCH_SERVICE: str = \"PUT YOUR SEARCH SERVICE ENDPOINT HERE\"\n",
-    "AZURE_OPENAI_ACCOUNT: str = \"PUT YOUR AZURE OPENAI ENDPOINT HERE\"\n",
-    "AZURE_DEPLOYMENT_MODEL: str = \"gpt-4o\""
+    "import os\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(override=True, dotenv_path=\"../.env\") \n",
+    "\n",
+    "AZURE_SEARCH_SERVICE: str = os.getenv(\"AZURE_SEARCH_SERVICE_ENDPOINT\")\n",
+    "AZURE_OPENAI_ACCOUNT: str = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
+    "AZURE_DEPLOYMENT_MODEL: str = os.getenv(\"AZURE_OPENAI_DEPLOYMENT_NAME\")"
    ]
   },
   {
@@ -154,9 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Gold View Inn: 제공되는 무료 조식은 컨티넨탈 브렉퍼스트이며, 수영장 이용 가능  \n",
+      "- King's Cellar Hotel: 무료 조식 정보는 없으나 수영장(실내 옥상 풀) 보유  \n",
+      "- Friendly Motor Inn: 무료 조식(컨티넨탈) 제공, 수영장 정보 없음  \n",
+      "- Trails End Motel: 무료 핫 브렉퍼스트 뷔페 제공, 수영장 정보 없음  \n",
+      "- Waterfront Scottish Inn: 무료 조식(컨티넨탈) 제공, 리조트 스타일 수영장 보유  \n",
+      "\n",
+      "**요약:**  \n",
+      "서울에서 무료 조식과 수영장을 모두 제공하는 호텔은 Gold View Inn과 Waterfront Scottish Inn입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up the query for generating responses\n",
     "from azure.identity import DefaultAzureCredential\n",
@@ -190,7 +200,8 @@
     "\"\"\"\n",
     "\n",
     "# Query is the question being asked. It's sent to the search engine and the LLM.\n",
-    "query=\"무료 조식이 제공되는 호텔을 추천해 주시겠어요?\"\n",
+    "query=\"free breakfast and pool hotels in seoul\"\n",
+    "\n",
     "\n",
     "# Search results are created by the search client.\n",
     "# Search results are composed of the top 5 results and the fields selected from the search index.\n",
@@ -202,7 +213,8 @@
     "    query_type=\"semantic\"\n",
     ")\n",
     "sources_formatted = \"\\n\".join([f'{document[\"HotelName\"]}:{document[\"Description\"]}:{document[\"Tags\"]}' for document in search_results])\n",
-    "\n",
+    "for document in search_results:\n",
+    "    print(document)\n",
     "# Send the search results and the query to the LLM to generate a response based on the prompt.\n",
     "response = openai_client.chat.completions.create(\n",
     "    messages=[\n",
@@ -246,14 +258,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are a few hotels that offer free breakfast, suitable for a room of four people:\n",
+      "\n",
+      "- **Friendly Motor Inn**\n",
+      "  - **Description**: Close to historic sites, local attractions, and urban parks. Free Shuttle to the airport and casinos. Free breakfast and WiFi.\n",
+      "  - **Address**: 3401 Nicholasville Rd, Lexington, KY 40503, USA\n",
+      "  - **Tags**: 24-hour front desk service, continental breakfast, free wifi\n",
+      "  - **Room**: Standard Room, 2 Queen Beds (City View)\n",
+      "  - **Room Rate**: $109.99\n",
+      "\n",
+      "- **Waterfront Scottish Inn**\n",
+      "  - **Description**: Newly Redesigned Rooms & airport shuttle. Minutes from the airport, enjoy lakeside amenities, a resort-style pool & stylish new guestrooms with Internet TVs.\n",
+      "  - **Address**: 3301 Veterans Memorial Blvd, Metairie, LA 70002, USA\n",
+      "  - **Tags**: 24-hour front desk service, continental breakfast, free wifi\n",
+      "  - **Room**: Standard Room, 2 Queen Beds (Cityside)\n",
+      "  - **Room Rate**: $113.99\n",
+      "\n",
+      "- **Swan Bird Lake Inn**\n",
+      "  - **Description**: We serve a continental-style breakfast each morning, featuring a variety of food and drinks.\n",
+      "  - **Address**: 1 Memorial Dr, Cambridge, MA 02142, USA\n",
+      "  - **Tags**: continental breakfast, free wifi, 24-hour front desk service\n",
+      "  - **Room**: Standard Room, 2 Queen Beds (Waterfront View)\n",
+      "  - **Room Rate**: $129.99\n",
+      "\n",
+      "- **Head Wind Resort**\n",
+      "  - **Description**: The best of old town hospitality combined with views of the river and cool breezes off the prairie. Enjoy a complimentary continental breakfast in the lobby, and free Wi-Fi throughout the hotel.\n",
+      "  - **Address**: 7633 E 63rd Pl, Tulsa, OK 74133, USA\n",
+      "  - **Tags**: free wifi\n",
+      "  - **Room**: Suite, 2 Queen Beds (Amenities)\n",
+      "  - **Room Rate**: $254.99\n",
+      "\n",
+      "These hotels all provide free breakfast and have rooms suitable for four guests.\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
     "# Query is the question being asked. It's sent to the search engine and the LLM.\n",
-    "query=\"무료 조식을 제공하는 호텔을 몇 군데 추천해 주시겠어요? 호텔 설명, 주소, 태그, 4인 1실의 객실 요금을 알려주세요.\"\n",
+    "query=\"Can you recommend a few hotels that offer free breakfast? Please provide the hotel description, address, tags, and room rate for a room for 4 people.\"\n",
     "\n",
     "# Set up the search results and the chat thread.\n",
     "# Retrieve the selected fields from the search index related to the question.\n",
