--- a/advanced/Quickstart-rag.ipynb
+++ b/advanced/Quickstart-rag.ipynb
@@ -333,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "azure-ai-workshop",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
