--- a/01_OpenAI_getting_started.ipynb
+++ b/01_OpenAI_getting_started.ipynb
@@ -2079,7 +2079,7 @@
    "name": "python310-sdkv2"
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "azure-ai-workshop",
    "language": "python",
    "name": "python3"
   },
@@ -2093,7 +2093,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   },
   "microsoft": {
    "host": {
