--- a/08_LLM_RAG_demo.ipynb
+++ b/08_LLM_RAG_demo.ipynb
@@ -662,7 +662,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "azure-ai-workshop",
    "language": "python",
    "name": "python3"
   },
@@ -676,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   },
   "orig_nbformat": 4
  },
