--- a/01_OpenAI_getting_started.ipynb
+++ b/01_OpenAI_getting_started.ipynb
@@ -314,7 +314,7 @@
     {
      "data": {
       "text/plain": [
-       "\"경복궁은 대한민국 서울특별시에 위치한 조선 시대의 대표적인 궁궐입니다. 1395년에 조선 왕조의 태조 이성계에 의해 건립되었으며, 조선 왕조의 법궁(법적으로 정해진 중심 궁궐)으로 사용되었습니다. 경복궁은 '큰 복을 누리는 궁궐'이라는 뜻을 가지고 있으며, 한국 전통 건축의 아름다움과 역사적 가치를 지닌 장소입니다.\\n\\n경복궁은 여러 차례의 소실과 재건을 거쳤지만, 현재는 주요 전각들이 복원되어 관람객들에게 개방되고 있습니다. 대표적인 건물로는 근정전(왕의 공식 행사와 국무를 보던 장소), 경회루(연회를 열던 누각), 광화문(정문) 등이 있습니다. 또한 경복궁은 한복 체험, 전통 공연 관람 등 다양한 문화 체험 프로그램도 제공하여 많은 관광객들에게 사랑받는 명소입니다.\\n\\n요약하자면, 경복궁은 한국의 역사와 문화를 대표하는 중요한 궁궐로서, 조선의 왕실 생활과 전통 건축 양식을 체험할 수 있는 장소입니다.\""
+       "'경복궁은 대한민국 서울특별시에 위치한 조선 시대의 대표적인 궁궐입니다. 1395년에 조선 왕조의 첫 번째 왕인 태조 이성계에 의해 건립되었으며, 조선 시대의 정치적 중심지이자 왕실의 주요 거주지 역할을 했습니다. 경복궁은 광화문을 정문으로 하여 근정전, 경회루, 사정전 등 여러 전각과 아름다운 정원으로 이루어져 있습니다. 또한 일제 강점기와 한국 전쟁을 거치면서 일부가 파괴되거나 훼손되었으나, 최근에는 복원 작업이 활발히 진행되어 옛 모습을 되찾고 있습니다. 오늘날 경복궁은 역사적 가치가 크고 한국 전통 건축미를 감상할 수 있는 대표적인 관광 명소 중 하나로, 많은 사람들이 방문하여 조선 왕조의 역사와 문화를 체험하고 있습니다.'"
       ]
      },
      "execution_count": 4,
@@ -2018,7 +2018,7 @@
    "name": "python310-sdkv2"
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "azure-ai-workshop",
    "language": "python",
    "name": "python3"
   },
