--- a/01_OpenAI_getting_started.ipynb
+++ b/01_OpenAI_getting_started.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "gather": {
      "logged": 1674829434433
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "gather": {
      "logged": 1674742720788
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "gather": {
      "logged": 1674494935186
@@ -314,10 +314,10 @@
     {
      "data": {
       "text/plain": [
-       "'경복궁은 대한민국 서울특별시에 위치한 조선 시대의 대표적인 궁궐입니다. 1395년에 조선 왕조의 첫 번째 왕인 태조 이성계에 의해 건립되었으며, 조선 시대의 정치적 중심지이자 왕실의 주요 거주지 역할을 했습니다. 경복궁은 광화문을 정문으로 하여 근정전, 경회루, 사정전 등 여러 전각과 아름다운 정원으로 이루어져 있습니다. 또한 일제 강점기와 한국 전쟁을 거치면서 일부가 파괴되거나 훼손되었으나, 최근에는 복원 작업이 활발히 진행되어 옛 모습을 되찾고 있습니다. 오늘날 경복궁은 역사적 가치가 크고 한국 전통 건축미를 감상할 수 있는 대표적인 관광 명소 중 하나로, 많은 사람들이 방문하여 조선 왕조의 역사와 문화를 체험하고 있습니다.'"
+       "'경복궁은 대한민국 서울특별시에 위치한 조선 왕조의 대표적인 궁궐입니다. 1395년에 조선 왕조의 첫 번째 왕인 태조 이성계가 건립하였으며, 조선의 정치, 문화, 역사적 중심지 역할을 했습니다. 경복궁은 다른 궁궐들보다 규모가 크고 건축미가 뛰어나 조선 왕조의 권위와 위엄을 상징합니다.\\n\\n경복궁 내부에는 근정전(왕이 공식적으로 업무를 보던 곳), 경회루(연회를 베풀던 누각), 강녕전(왕의 생활 공간) 등 다양한 전각들이 있으며, 전통 한옥의 아름다움과 한국 전통 건축 양식을 잘 보여줍니다. 일제강점기 동안 훼손과 파괴를 겪었으나, 현재는 복원 작업을 거쳐 많은 관광객과 시민들에게 개방되어 한국의 역사와 문화를 체험할 수 있는 중요한 문화재입니다.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "gather": {
      "logged": 1674494940872
@@ -369,10 +369,10 @@
     {
      "data": {
       "text/plain": [
-       "\"경복궁은 대한민국 서울특별시에 위치한 조선 시대의 대표적인 궁궐입니다. 1395년에 조선 왕조의 창건자 이성계에 의해 처음 건립되었으며, 조선 왕조의 법궁(法宮)으로서 왕이 정치와 행정을 집행하던 중심지였습니다. 경복궁은 '큰 복을 누리는 궁궐'이라는 뜻을 가지고 있으며, 화려한 건축양식과 아름다운 자연 경관이 조화를 이루고 있습니다.\\n\\n역사적으로 임진왜란 때 크게 파괴되었으나 이후 여러 차례 중건되었고, 현대에는 대한민국의 문화유산으로 보존 및 복원 작업이 활발히 이루어지고 있습니다. 현재 경복궁은 관광 명소로도 유명하며, 궁궐 내부에는 근정전, 경회루, 사정전 등 다양한 전각과 왕실 유물이 전시된 박물관이 있습니다. 전통 한복을 입고 방문할 경우 입장료 할인 혜택을 받을 수 있어 많은 사람들이 전통문화를 체험하러 방문합니다.\""
+       "'경복궁은 대한민국 서울특별시에 위치한 조선 시대의 대표적인 궁궐입니다. 1395년에 조선 왕조의 태조 이성계가 건립했으며, 조선 왕조의 법궁(주된 궁궐) 역할을 했습니다. 경복궁은 한국 전통 건축 양식을 잘 보여주는 아름다운 건물들과 광대한 부지로 이루어져 있으며, 왕과 왕비가 거주하고 국가의 중요한 의식이 거행되는 장소로 사용되었습니다.\\n\\n경복궁은 임진왜란 때 대부분 소실되었으나 이후 여러 차례 복원 작업을 거쳐 현재에 이르고 있습니다. 경복궁 내에는 근정전, 경회루, 강녕전 등 여러 중요한 전각들이 있으며, 많은 관광객과 한국 역사에 관심 있는 사람들이 방문하는 명소입니다. 또한 경복궁은 조선 왕조와 한국의 전통 문화를 이해하는 데 중요한 역사적 가치가 있는 곳입니다.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "gather": {
      "logged": 1674495198534
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "gather": {
      "logged": 1674495201868
@@ -471,10 +471,10 @@
     {
      "data": {
       "text/plain": [
-       "'대규모 사전 학습된 언어 모델은 소수의 예제만으로도 다양한 NLP 작업에서 높은 성능을 발휘할 수 있으며, 이는 기존의 대량 데이터 기반 미세 조정보다 효율적이고 경쟁력 있다는 내용입니다.'"
+       "'대규모 언어 모델을 사전 학습한 후 소수의 예제만으로도 특정 작업에서 높은 성능을 내며, 기존 미세 조정 방법보다 효율적이고 경쟁력 있다는 점을 보였습니다.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "gather": {
      "logged": 1674499424645
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "gather": {
      "logged": 1674499378518
@@ -569,7 +569,7 @@
        "'분류된 카테고리: 하드웨어 지원'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "gather": {
      "logged": 1674257087279
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -663,10 +663,10 @@
     {
      "data": {
       "text/plain": [
-       "'제품 설명과 시드워드를 기반으로 제품 이름 제안을 드립니다.\\n\\n1. 가정용 밀크쉐이크 메이커  \\n- 씨드워드: 빠르고, 건강하고, 컴팩트  \\n- 이름 제안:  \\n  - 홈쉐이커  \\n  - 핏쉐이커  \\n  - 퀵쉐이크  \\n  - 쉐이크 메이커\\n\\n2. 모든 발 사이즈에 맞는 신발  \\n- 씨드워드: 적응성, 핏, 옴니핏  \\n- 이름 제안:  \\n  - 옴니핏 슈즈  \\n  - 에버핏  \\n  - 어댑트슈  \\n  - 핏올슈즈  \\n  - 어댑티브 플렉스\\n\\n필요하시면 추가 이름 제안이나 마케팅 문구도 도와드릴 수 있습니다.'"
+       "'제품 이름 제안:\\n\\n1. 가정용 밀크쉐이크 메이커  \\n- 홈쉐이커 (HomeShaker)  \\n- 핏 쉐이커 (Fit Shaker)  \\n- 퀵쉐이크 (QuickShake)  \\n- 쉐이크 메이커 (Shake Maker)\\n\\n2. 모든 발 사이즈에 맞는 신발  \\n- 옴니핏 슈즈 (OmniFit Shoes)  \\n- 어댑트핏 (AdaptFit)  \\n- 피트올 (FitAll)  \\n- 유니핏 슈즈 (UniFit Shoes)'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "gather": {
      "logged": 1674829364153
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "gather": {
      "logged": 1674829424097
@@ -1776,7 +1776,7 @@
        " ...]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "gather": {
      "logged": 1674829555255
@@ -1808,15 +1808,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3991128479510532\n",
-      "0.7223092337004864\n",
-      "0.7344895658606448\n"
+      "0.39924851892853164\n",
+      "0.7224205699175781\n",
+      "0.734425910504974\n"
      ]
     }
    ],
    "source": [
     "# compare several words\n",
     "automobile_embedding    = client.embeddings.create(input='자동차', model=model).data[0].embedding\n",
+    "automobile_embedding1    = client.embeddings.create(input='자동차', model=model).data[0].embedding\n",
     "vehicle_embedding       = client.embeddings.create(input='차량', model=model).data[0].embedding\n",
     "dinosaur_embedding      = client.embeddings.create(input='공룡', model=model).data[0].embedding\n",
     "stick_embedding         = client.embeddings.create(input='스틱', model=model).data[0].embedding\n",
@@ -1843,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "gather": {
      "logged": 1674831122093
@@ -1916,7 +1917,7 @@
        "2  소년, 스파이더맨 만남에 \"가장 좋았어요\"\\n유시프, 유니버설 스튜디오에서 스폰지밥...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "gather": {
      "logged": 1674831294043
@@ -1966,8 +1967,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6086936753931762\n",
-      "0.8596084049407773\n"
+      "0.6079789744260362\n",
+      "0.8607006986659866\n"
      ]
     }
    ],
@@ -2032,7 +2033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.9"
   },
   "microsoft": {
    "host": {
