validate nl2nosql

--- a/advanced/nl2nosql.ipynb
+++ b/advanced/nl2nosql.ipynb
@@ -29,9 +29,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installing pymongo...\n",
+      "Collecting pymongo\n",
+      "  Downloading pymongo-4.15.3-cp312-cp312-macosx_11_0_arm64.whl.metadata (22 kB)\n",
+      "Collecting dnspython<3.0.0,>=1.16.0 (from pymongo)\n",
+      "  Downloading dnspython-2.8.0-py3-none-any.whl.metadata (5.7 kB)\n",
+      "Downloading pymongo-4.15.3-cp312-cp312-macosx_11_0_arm64.whl (920 kB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m920.7/920.7 kB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading dnspython-2.8.0-py3-none-any.whl (331 kB)\n",
+      "Installing collected packages: dnspython, pymongo\n",
+      "Successfully installed dnspython-2.8.0 pymongo-4.15.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pymongo version: 4.15.3\n"
+     ]
+    }
+   ],
    "source": [
     "# 필요한 패키지 설치 (pymongo 추가)\n",
     "import subprocess\n",
@@ -52,7 +85,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Azure OpenAI 클라이언트 초기화 완료 (배포: gpt-4.1-mini)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -86,9 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ MongoDB 컨테이너 시작 완료\n",
+      "컨테이너 ID: 80ce48a0724298a725323008e488a525e461689723dedab397192d80364986b1\n",
+      "MongoDB 시작 대기 중...\n"
+     ]
+    }
+   ],
    "source": [
     "# MongoDB 컨테이너 시작\n",
     "import subprocess\n",
@@ -125,9 +176,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ MongoDB 연결 완료\n",
+      "데이터베이스: samsung_products\n",
+      "컬렉션: products\n"
+     ]
+    }
+   ],
    "source": [
     "# MongoDB 연결\n",
     "MONGO_URI = \"mongodb://admin:admin123@localhost:27017/\"\n",
@@ -156,9 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 8개의 제품 데이터 삽입 완료\n",
+      "삽입된 문서 ID: [ObjectId('69095b0aef953cb1e58d4ac9'), ObjectId('69095b0aef953cb1e58d4aca'), ObjectId('69095b0aef953cb1e58d4acb'), ObjectId('69095b0aef953cb1e58d4acc'), ObjectId('69095b0aef953cb1e58d4acd'), ObjectId('69095b0aef953cb1e58d4ace'), ObjectId('69095b0aef953cb1e58d4acf'), ObjectId('69095b0aef953cb1e58d4ad0')]\n"
+     ]
+    }
+   ],
    "source": [
     "# 삼성전자 제품 샘플 데이터\n",
     "samsung_products = [\n",
@@ -306,9 +376,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전체 제품 수: 8\n",
+      "\n",
+      "샘플 제품 정보:\n",
+      "{\n",
+      "  \"_id\": \"69095b0aef953cb1e58d4ac9\",\n",
+      "  \"product_id\": \"GNT900X5L\",\n",
+      "  \"name\": \"갤럭시북4 프로\",\n",
+      "  \"category\": \"노트북\",\n",
+      "  \"brand\": \"Samsung\",\n",
+      "  \"price\": 2490000,\n",
+      "  \"release_date\": \"2024-01-15\",\n",
+      "  \"specifications\": [\n",
+      "    {\n",
+      "      \"name\": \"화면크기\",\n",
+      "      \"value\": 16,\n",
+      "      \"unit\": \"인치\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"name\": \"해상도\",\n",
+      "      \"value\": \"3200x2000\",\n",
+      "      \"unit\": \"픽셀\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"name\": \"프로세서\",\n",
+      "      \"value\": \"Intel Core Ultra 7\",\n",
+      "      \"unit\": \"\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"name\": \"메모리\",\n",
+      "      \"value\": 16,\n",
+      "      \"unit\": \"GB\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"name\": \"저장공간\",\n",
+      "      \"value\": 512,\n",
+      "      \"unit\": \"GB\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"name\": \"무게\",\n",
+      "      \"value\": 1.55,\n",
+      "      \"unit\": \"kg\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# 전체 제품 수 확인\n",
     "total_count = collection.count_documents({})\n",
@@ -331,9 +452,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ nl_to_mongodb_query 함수 정의 완료\n"
+     ]
+    }
+   ],
    "source": [
     "def nl_to_mongodb_query(natural_language_query: str) -> dict:\n",
     "    \"\"\"\n",
@@ -419,9 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ search_products_with_nl 함수 정의 완료\n"
+     ]
+    }
+   ],
    "source": [
     "def search_products_with_nl(natural_language_query: str):\n",
     "    \"\"\"\n",
@@ -480,9 +617,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "🔍 질문: 15인치 화면보다 작은 랩탑을 찾아줘\n",
+      "================================================================================\n",
+      "\n",
+      "📝 생성된 MongoDB 쿼리:\n",
+      "{\n",
+      "  \"category\": \"노트북\",\n",
+      "  \"specifications\": {\n",
+      "    \"$elemMatch\": {\n",
+      "      \"name\": \"화면크기\",\n",
+      "      \"value\": {\n",
+      "        \"$lt\": 15\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "✅ 검색 결과: 2개 제품 발견\n",
+      "\n",
+      "================================================================================\n",
+      "\n",
+      "[1] 갤럭시북4 울트라\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 3,290,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 14 인치\n",
+      "     • 해상도: 2880x1800 픽셀\n",
+      "     • 프로세서: Intel Core Ultra 9 \n",
+      "     • 메모리: 32 GB\n",
+      "     • 저장공간: 1024 GB\n",
+      "     • 무게: 1.21 kg\n",
+      "\n",
+      "[2] 갤럭시북3 프로 360\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 2,190,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 13.3 인치\n",
+      "     • 해상도: 1920x1080 픽셀\n",
+      "     • 프로세서: Intel Core i7-1360P \n",
+      "     • 메모리: 16 GB\n",
+      "     • 저장공간: 512 GB\n",
+      "     • 무게: 1.16 kg\n",
+      "\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "results = search_products_with_nl(\"15인치 화면보다 작은 랩탑을 찾아줘\")"
    ]
@@ -496,9 +685,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "🔍 질문: 메모리가 16GB 이상인 제품을 보여줘\n",
+      "================================================================================\n",
+      "\n",
+      "📝 생성된 MongoDB 쿼리:\n",
+      "{\n",
+      "  \"specifications\": {\n",
+      "    \"$elemMatch\": {\n",
+      "      \"name\": \"메모리\",\n",
+      "      \"value\": {\n",
+      "        \"$gte\": 16\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "✅ 검색 결과: 3개 제품 발견\n",
+      "\n",
+      "================================================================================\n",
+      "\n",
+      "[1] 갤럭시북4 프로\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 2,490,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 16 인치\n",
+      "     • 해상도: 3200x2000 픽셀\n",
+      "     • 프로세서: Intel Core Ultra 7 \n",
+      "     • 메모리: 16 GB\n",
+      "     • 저장공간: 512 GB\n",
+      "     • 무게: 1.55 kg\n",
+      "\n",
+      "[2] 갤럭시북4 울트라\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 3,290,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 14 인치\n",
+      "     • 해상도: 2880x1800 픽셀\n",
+      "     • 프로세서: Intel Core Ultra 9 \n",
+      "     • 메모리: 32 GB\n",
+      "     • 저장공간: 1024 GB\n",
+      "     • 무게: 1.21 kg\n",
+      "\n",
+      "[3] 갤럭시북3 프로 360\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 2,190,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 13.3 인치\n",
+      "     • 해상도: 1920x1080 픽셀\n",
+      "     • 프로세서: Intel Core i7-1360P \n",
+      "     • 메모리: 16 GB\n",
+      "     • 저장공간: 512 GB\n",
+      "     • 무게: 1.16 kg\n",
+      "\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "results = search_products_with_nl(\"메모리가 16GB 이상인 제품을 보여줘\")"
    ]
@@ -512,9 +763,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "🔍 질문: 1.5kg보다 가벼운 노트북을 찾아줘\n",
+      "================================================================================\n",
+      "\n",
+      "📝 생성된 MongoDB 쿼리:\n",
+      "{\n",
+      "  \"category\": \"노트북\",\n",
+      "  \"specifications\": {\n",
+      "    \"$elemMatch\": {\n",
+      "      \"name\": \"무게\",\n",
+      "      \"value\": {\n",
+      "        \"$lt\": 1.5\n",
+      "      },\n",
+      "      \"unit\": \"kg\"\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "✅ 검색 결과: 2개 제품 발견\n",
+      "\n",
+      "================================================================================\n",
+      "\n",
+      "[1] 갤럭시북4 울트라\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 3,290,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 14 인치\n",
+      "     • 해상도: 2880x1800 픽셀\n",
+      "     • 프로세서: Intel Core Ultra 9 \n",
+      "     • 메모리: 32 GB\n",
+      "     • 저장공간: 1024 GB\n",
+      "     • 무게: 1.21 kg\n",
+      "\n",
+      "[2] 갤럭시북3 프로 360\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 2,190,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 13.3 인치\n",
+      "     • 해상도: 1920x1080 픽셀\n",
+      "     • 프로세서: Intel Core i7-1360P \n",
+      "     • 메모리: 16 GB\n",
+      "     • 저장공간: 512 GB\n",
+      "     • 무게: 1.16 kg\n",
+      "\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "results = search_products_with_nl(\"1.5kg보다 가벼운 노트북을 찾아줘\")"
    ]
@@ -528,9 +832,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "🔍 질문: 200만원 이하의 제품을 찾아줘\n",
+      "================================================================================\n",
+      "\n",
+      "📝 생성된 MongoDB 쿼리:\n",
+      "{\n",
+      "  \"price\": {\n",
+      "    \"$lte\": 2000000\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "✅ 검색 결과: 3개 제품 발견\n",
+      "\n",
+      "================================================================================\n",
+      "\n",
+      "[1] 갤럭시북3\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 1,590,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 15.6 인치\n",
+      "     • 해상도: 1920x1080 픽셀\n",
+      "     • 프로세서: Intel Core i5-1335U \n",
+      "     • 메모리: 8 GB\n",
+      "     • 저장공간: 256 GB\n",
+      "     • 무게: 1.78 kg\n",
+      "\n",
+      "[2] 갤럭시 탭 S9 울트라\n",
+      "   - 카테고리: 태블릿\n",
+      "   - 가격: 1,650,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 14.6 인치\n",
+      "     • 해상도: 2960x1848 픽셀\n",
+      "     • 프로세서: Snapdragon 8 Gen 2 \n",
+      "     • 메모리: 12 GB\n",
+      "     • 저장공간: 256 GB\n",
+      "     • 무게: 0.732 kg\n",
+      "\n",
+      "[3] 갤럭시 S24 울트라\n",
+      "   - 카테고리: 스마트폰\n",
+      "   - 가격: 1,698,400원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 6.8 인치\n",
+      "     • 해상도: 3120x1440 픽셀\n",
+      "     • 프로세서: Snapdragon 8 Gen 3 \n",
+      "     • 메모리: 12 GB\n",
+      "     • 저장공간: 256 GB\n",
+      "     • 무게: 0.232 kg\n",
+      "     • 배터리: 5000 mAh\n",
+      "\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "results = search_products_with_nl(\"200만원 이하의 제품을 찾아줘\")"
    ]
@@ -544,9 +906,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "🔍 질문: 저장공간이 512GB 이상인 노트북을 보여줘\n",
+      "================================================================================\n",
+      "\n",
+      "📝 생성된 MongoDB 쿼리:\n",
+      "{\n",
+      "  \"category\": \"노트북\",\n",
+      "  \"specifications\": {\n",
+      "    \"$elemMatch\": {\n",
+      "      \"name\": \"저장공간\",\n",
+      "      \"value\": {\n",
+      "        \"$gte\": 512\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "✅ 검색 결과: 3개 제품 발견\n",
+      "\n",
+      "================================================================================\n",
+      "\n",
+      "[1] 갤럭시북4 프로\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 2,490,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 16 인치\n",
+      "     • 해상도: 3200x2000 픽셀\n",
+      "     • 프로세서: Intel Core Ultra 7 \n",
+      "     • 메모리: 16 GB\n",
+      "     • 저장공간: 512 GB\n",
+      "     • 무게: 1.55 kg\n",
+      "\n",
+      "[2] 갤럭시북4 울트라\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 3,290,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 14 인치\n",
+      "     • 해상도: 2880x1800 픽셀\n",
+      "     • 프로세서: Intel Core Ultra 9 \n",
+      "     • 메모리: 32 GB\n",
+      "     • 저장공간: 1024 GB\n",
+      "     • 무게: 1.21 kg\n",
+      "\n",
+      "[3] 갤럭시북3 프로 360\n",
+      "   - 카테고리: 노트북\n",
+      "   - 가격: 2,190,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 13.3 인치\n",
+      "     • 해상도: 1920x1080 픽셀\n",
+      "     • 프로세서: Intel Core i7-1360P \n",
+      "     • 메모리: 16 GB\n",
+      "     • 저장공간: 512 GB\n",
+      "     • 무게: 1.16 kg\n",
+      "\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "results = search_products_with_nl(\"저장공간이 512GB 이상인 노트북을 보여줘\")"
    ]
@@ -560,9 +985,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "🔍 질문: 주사율이 100Hz 이상인 모니터를 찾아줘\n",
+      "================================================================================\n",
+      "\n",
+      "📝 생성된 MongoDB 쿼리:\n",
+      "{\n",
+      "  \"category\": \"모니터\",\n",
+      "  \"specifications\": {\n",
+      "    \"$elemMatch\": {\n",
+      "      \"name\": \"주사율\",\n",
+      "      \"value\": {\n",
+      "        \"$gte\": 100\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "✅ 검색 결과: 1개 제품 발견\n",
+      "\n",
+      "================================================================================\n",
+      "\n",
+      "[1] 오딧세이 OLED G9\n",
+      "   - 카테고리: 모니터\n",
+      "   - 가격: 2,690,000원\n",
+      "   - 스펙:\n",
+      "     • 화면크기: 49 인치\n",
+      "     • 해상도: 5120x1440 픽셀\n",
+      "     • 주사율: 240 Hz\n",
+      "     • 패널타입: OLED \n",
+      "     • 응답속도: 0.03 ms\n",
+      "\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "results = search_products_with_nl(\"주사율이 100Hz 이상인 모니터를 찾아줘\")"
    ]
@@ -578,9 +1043,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ MongoDB 연결 종료\n",
+      "✅ MongoDB 컨테이너 중지 완료\n",
+      "✅ MongoDB 컨테이너 제거 완료\n"
+     ]
+    }
+   ],
    "source": [
     "# MongoDB 연결 종료\n",
     "mongo_client.close()\n",
@@ -625,7 +1100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "azure-ai-workshop",
    "language": "python",
    "name": "python3"
   },
@@ -639,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
