--- a/advanced/vector_search_for_llm.ipynb
+++ b/advanced/vector_search_for_llm.ipynb
@@ -1072,7 +1072,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "azure-ai-workshop",
    "language": "python",
    "name": "python3"
   },
@@ -1086,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.9"
   },
   "orig_nbformat": 4
  },
