--- a/01_OpenAI_getting_started.ipynb
+++ b/01_OpenAI_getting_started.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "gather": {
      "logged": 1674829434433
@@ -142,20 +142,24 @@
     "import sys\n",
     "import os\n",
     "from openai import AzureOpenAI\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
     "import tiktoken\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(override=True)\n",
     "\n",
+    "credential = DefaultAzureCredential()\n",
+    "token_provider = get_bearer_token_provider(credential, \"https://cognitiveservices.azure.com/.default\")\n",
+    "\n",
     "client = AzureOpenAI(\n",
     "  azure_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\"), \n",
-    "  api_key=os.getenv(\"AZURE_OPENAI_KEY\"),  \n",
+    "  azure_ad_token_provider=token_provider,\n",
     "  api_version=\"2024-02-15-preview\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,15 +167,19 @@
     "import sys\n",
     "import os\n",
     "from openai import AzureOpenAI\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
     "import tiktoken\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(override=True)\n",
     "\n",
+    "credential = DefaultAzureCredential()\n",
+    "token_provider = get_bearer_token_provider(credential, \"https://cognitiveservices.azure.com/.default\")\n",
+    "\n",
     "client = AzureOpenAI(\n",
     "  azure_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\"), \n",
-    "  api_key=os.getenv(\"AZURE_OPENAI_KEY\"),  \n",
+    "  azure_ad_token_provider=token_provider,\n",
     "  api_version=\"2024-02-15-preview\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
